[package]
name = "multi-visa-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["debug", "derive"] }
itertools = "0.12.0"
